<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ViewProfitButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:textSize="20sp"
        android:text="@string/view_profit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />
    <Button
        android:id="@+id/ScanItemButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:textSize="20sp"
        android:text="@string/scan_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />
    <Button
        android:id="@+id/ViewMasterDataButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:textSize="20sp"
        android:text="@string/view_master_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />
    <Button
        android:id="@+id/ViewInventoryButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:textSize="20sp"
        android:text="@string/view_inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />



</androidx.constraintlayout.widget.ConstraintLayout>