<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@android:color/white"
        app:frameCornersRadius="0dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:maskColor="#77000000"
        tools:ignore="MissingClass" />

    <TextView
        android:id="@+id/ScannedBarcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintVertical_bias="0.1" />


    <EditText
        android:id="@+id/QuantityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/CheckoutButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintVertical_bias="0.55" />
    <Button
        android:id="@+id/AddButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintVertical_bias="0.9"/>
    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        app:layout_constraintVertical_bias="0.9"/>



</androidx.constraintlayout.widget.ConstraintLayout>